opa_gatekeeper/manifest-bad-1-no-labels.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-no-labels
  namespace: opa-demo
spec:
  containers:
    - name: nginx
      image: registry.k8s.io/pause:3.9
