opa_gatekeeper/manifest-bad-3-untrusted-registry.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad-untrusted-registry
  namespace: opa-demo
  labels:
    owner: bob
    env: dev
    cost-center: cc-9999
spec:
  containers:
    - name: app
      image: docker.io/library/nginx:1.25     # not in allowed registries
