opa_gatekeeper/constraint-02-allowed-repos.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: trusted-registries-only
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaces: ["opa-demo"]
  parameters:
    repos:
      - "registry.k8s.io/"
      - "gcr.io/google-containers/"
      - "quay.io/prometheus/"
